docs(DefaultArgsFeature): remove "add-opens" comment